SERVER-14556 mongod --configsvr default dbpath should be same as 2.4

(cherry picked from commit 7797c0ed4fc2ce61979ae5d8b0931d73e08855bc)

Conflicts:
	src/mongo/db/mongod_options.cpp
	src/mongo/db/storage_options.h